apps/website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: website
  labels:
    istio-injection: enabled
