apps/website/website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: website
spec:
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: nginx:1.23.3-alpine
          resources:
            requests:
              cpu: 50m
            limits:
              cpu: 100m
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
            - name: nginx
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
              readOnly: true
            - name: nginx
              mountPath: /usr/share/nginx/html/style.css
              subPath: style.css
              readOnly: true
            - name: nginx
              mountPath: /usr/share/nginx/html/error.html
              subPath: error.html
              readOnly: true
            - name: nginx
              mountPath: /usr/share/nginx/html/error.css
              subPath: error.css
              readOnly: true
            - name: nginx
              mountPath: /usr/share/nginx/html/mail.js
              subPath: mail.js
              readOnly: true
            - name: nginx
              mountPath: /usr/share/nginx/html/logo.gif
              subPath: logo.gif
              readOnly: true
            - name: nginx
              mountPath: /usr/share/nginx/html/logo.ico
              subPath: logo.ico
              readOnly: true
      volumes:
        - name: nginx
          configMap:
            name: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
spec:
  selector:
    app: website
  ports:
    - protocol: TCP
      port: 80
