apps/website/ingress-redirect-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-redirect-ingress
  namespace: website
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/permanent-redirect: 192.168.178.91$request_uri
spec:
  tls:
    - hosts:
        - ha.tmem.de
      secretName: local-redirect-tls
  rules:
    - host: ha.tmem.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  number: 80
